# OpenInstax

./: .gitignore  404.html  AGENTS.md  CLAUDE.md  CNAME  Cargo.toml  README.md  index.html  mkdocs.yml  sitemap.xml
.github/workflows/: bridge-firmware.yml  ci.yml  release.yml
bridge/: ARCHITECTURE.md  CLAUDE.md  DECISIONS.md  README.md  ROADMAP.md  pyproject.toml
bridge/assets/: boot-splash.rgb565
bridge/boot/firmware/: cmdline.example.txt  config.txt
bridge/config/NetworkManager/: instantlink-bridge-hotspot.nmconnection
bridge/docs/: ble-bonding-notes.md  boot-time-budget.md  current-context.md  sony-camera-setup.md  ux-flows.md  wifi-ftp-modes.md
bridge/requirements/: constraints.txt
bridge/scripts/: build-firmware-bundle.sh  cleanup-legacy-instantbridge.sh  deploy-to-pi.sh  install-firmware-bundle.sh  probe-wifi-ap-sta.sh  provision-sd.sh  sign-firmware-manifest.py  wifi-mode.sh
bridge/src/instantlink_bridge/: app.py  boot_splash.py  config.py  system_info.py
bridge/src/instantlink_bridge/ble/: agent.py  client.py  instantlink.py  instax.py
bridge/src/instantlink_bridge/camera/: ftp.py
bridge/src/instantlink_bridge/imaging/: pipeline.py  postprocess.py  presets.py
bridge/src/instantlink_bridge/manager/: __init__.py  api.py  auth.py  backup.py  cli.py  contract.py  diagnostics.py  release_slots.py  schema.py  signing.py  status.py  update_flow.py
bridge/src/instantlink_bridge/power/: battery_estimator.py
bridge/src/instantlink_bridge/ui/: controller.py  display.py  i18n.py  input.py  models.py  pairing.py  render.py  settings.py  status.py  status_indicator.py  theme.py
bridge/src/instantlink_bridge/update/: signing.py
bridge/systemd/: instantlink-bridge-boot-splash.service  instantlink-bridge-manager.service  instantlink-bridge.service
bridge/tests/: test_app.py  test_battery_estimator.py  test_config_gate.py  test_deploy_scripts.py  test_firmware_signing.py  test_ftp_receive.py  test_ftp_signal.py  test_i18n.py  test_manager.py  test_manager_backup.py  test_manager_diagnostics.py  test_manager_release_slots.py  test_manager_update_api.py  test_postprocess.py  test_presets.py  test_render_slider.py  test_status_indicator.py  test_ui_controller.py  test_ui_pairing.py  test_ui_render.py  test_ui_status.py
crates/instantlink-cli/: Cargo.toml
crates/instantlink-cli/src/: main.rs  output.rs
crates/instantlink-core/: Cargo.toml
crates/instantlink-core/src/: commands.rs  device.rs  error.rs  image.rs  lib.rs  printer.rs  protocol.rs  transport.rs
crates/instantlink-ffi/: Cargo.toml  build.rs  cbindgen.toml
crates/instantlink-ffi/include/: instantlink.h
crates/instantlink-ffi/src/: lib.rs
crates/openinstax-cli/: Cargo.toml
crates/openinstax-core/: Cargo.toml
crates/openinstax-core/src/: commands.rs  device.rs  error.rs  image.rs  lib.rs  models.rs  printer.rs  protocol.rs  transport.rs
crates/openinstax-ffi/: Cargo.toml  build.rs  cbindgen.toml
crates/openinstax-ffi/include/: openinstax.h
crates/openinstax-ffi/src/: lib.rs
development/architecture/: index.html
development/bridge-firmware-release/: index.html
development/contributing/: index.html
development/reverse-engineering/: index.html
docs/: index.md
docs/development/: architecture.md  bridge-firmware-release.md  contributing.md
docs/getting-started/: installation.md  quickstart.md
docs/plans/: 001-full-stack-scaffold.md  002-ci-cd-setup.md  003-github-pages.md  004-app-bundle-and-release.md  005-mock-transport-device-tests.md  006-overlay-system.md  008-ui-ux-pass-2.md  009-repo-simplification-audit.md  011-macos-coordinator-extraction.md  014-printer-led-print-feedback.md  015-ffi-callback-safety.md  016-transport-command-serialization.md  017-reconnect-fallback-behavior.md  018-auto-update-signature-verification.md  019-packet-assembler-error-surfacing.md  020-notification-listener-lifecycle.md  021-print-flow-deduplication.md  022-ffi-device-guard-concurrency.md  023-ffi-unsafe-block-discipline.md  024-protocol-build-packet-bounds.md  025-rand-dependency-upgrade.md  026-docs-ffi-symbol-count-and-context-variants.md  027-docs-protocol-mini-link-3-flip.md  029-bridge-control-panel.md  030-bridge-secure-management-updates.md  031-bridge-printer-connection-recovery.md  032-bridge-startup-and-power.md  033-bridge-ux-and-headless.md  034-bridge-ux-polish-audit-pass.md  036-adjustments-live-preview-and-sliders.md  037-settings-audit-cleanup.md  038-bridge-usb-experience-audit.md  039-schema-driven-settings-sync.md
docs/reference/: cli.md  ffi.md  protocol.md
getting-started/installation/: index.html
getting-started/quickstart/: index.html
macos/: Info.plist.template
macos/InstantLink/: InstantLinkApp.swift  InstantLinkCLI.swift  InstantLinkFFI.swift  OverlayModels.swift
macos/OpenInstax/: OpenInstaxApp.swift  OpenInstaxCLI.swift
macos/Resources/: AppIcon.icns
macos/Tests/: BridgeBackupCoordinatorTests.swift  BridgeConfigTests.swift  BridgeControlCoordinatorTests.swift  BridgeDiagnosticsCoordinatorTests.swift  BridgeFirmwareBundleTests.swift  BridgeHTTPTransportTests.swift  BridgeModelsTests.swift  BridgeSettingsDraftTests.swift  BridgeTransportTests.swift  BridgeUpdateCoordinatorTests.swift  PrinterConnectionCoordinatorTests.swift  TestMain.swift
plans/001-full-stack-scaffold/: index.html
plans/002-ci-cd-setup/: index.html
plans/003-github-pages/: index.html
plans/004-app-bundle-and-release/: index.html
plans/005-mock-transport-device-tests/: index.html
plans/006-overlay-system/: index.html
plans/007-ui-ux-pass-1/: index.html
plans/008-ui-ux-pass-2/: index.html
plans/009-repo-simplification-audit/: index.html
plans/010-ui-ux-pass-3/: index.html
plans/011-macos-coordinator-extraction/: index.html
plans/012-macos-15-liquid-glass-adoption/: index.html
plans/013-ffi-connection-stage-callbacks/: index.html
plans/014-printer-led-print-feedback/: index.html
scripts/: build-app.sh  check-localizations.py  generate-icon.py  stage-bridge-firmware-for-app.sh  test-macos.sh
search/: search_index.json
(+92 files in other folders)
