[package]
name = "instantlink-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "instantlink"
path = "src/main.rs"

[dependencies]
instantlink-core = { path = "../instantlink-core" }
clap = { workspace = true }
indicatif = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
env_logger = { workspace = true }
log = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
