[package]
name = "instantlink-core"
version = "0.1.34"
edition = "2024"

[dependencies]
btleplug = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
image = { workspace = true }
log = { workspace = true }
uuid = { workspace = true }
futures = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio-util = { workspace = true }

[target.'cfg(target_os = "linux")'.dependencies]
# Enables vendored libdbus for Linux cross-builds from macOS. Without this, libdbus-sys
# requires a target-specific dbus-1.pc sysroot just to build the BlueZ backend.
libdbus-sys = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
