[package]
name = "openinstax-core"
version = "0.1.0"
edition = "2021"

[dependencies]
btleplug = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
image = { workspace = true }
log = { workspace = true }
uuid = { workspace = true }
futures = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
